fixed spacing on form

--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -264,7 +264,7 @@
 	.gform_body {
 		#field_1_2, #field_1_3 {
 			display: inline-block;
-			min-width: 400px;
+			min-width: 392px;
 		}
 	}
 }
