--- a/style.css
+++ b/style.css
@@ -1296,4 +1296,4 @@ object {
   margin: 0 auto; }
   .contact-form .gform_body #field_1_2, .contact-form .gform_body #field_1_3 {
     display: inline-block;
-    min-width: 400px; }
+    min-width: 392px; }
